versioned_docs/version-12.4.0/fast_data/configuration/config_maps/kafka_projection_updates.mdx
---
id: kafka_projection_updates
title: Kafka Projection Updates Configuration
sidebar_label: Kafka Projection Updates
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

## Overview

The Kafka Projection Updates is a JSON file which describes for each projection a [Projection Updates](/fast_data/inputs_and_outputs.md#projection-update) topic and a [Strategy](/fast_data/configuration/strategies.md) to generate the projection changes identifier. This file is typically used by:

* the [Real-Time Updater](/fast_data/realtime_updater.md), to generate a `pr-update` message;
* the [Single View Trigger Generator](/fast_data/single_view_trigger_generator.md), to execute a strategy starting from a `pr-update` message.

## Configuration Properties

The Kafka Projection Updates is a JSON object where each key represents the name of a projection. Each entry has the following fields:

- `updatesTopic`: The topic where the Projection Updates messages are sent, if you haven't created a topic for the projection yet take a look to our [naming conventions for the Projection Updates topics](/fast_data/inputs_and_outputs.md#topic-naming-convention-1).
- `strategy`: the type of strategies that you want to use onto this projection. You can choose either `__automatic__` or `__fromFile__`.

There will be different behaviors based on the strategy value. The JSON configuration can contain both automatic and manual strategies.

<Tabs
  defaultValue="automatic"
  groupId="strategy-type"
  values={[
      { label: 'Automatic', value: 'automatic' },
      { label: 'Manual', value: 'manual' }
  ]}
>
<TabItem value="automatic">

```json title="kafkaProjectionUpdates.json"
{
  "PROJECTION_NAME": {
    "updatesTopic": "PROJECTION_UPDATE_TOPIC",
    "strategy": "__automatic__"
  }
}
```

The automatic strategy handles the generation of the projection changes identifier accordingly to [the paths in the Projection Changes Schema](/fast_data/configuration/config_maps/projection_changes_schema.md) config map containing the projection.

</TabItem>
<TabItem value="manual">

```json title="kafkaProjectionUpdates.json"
{
  "PROJECTION_NAME": {
    "updatesTopic": "PROJECTION_UPDATE_TOPIC",
    "strategy": "__fromFile__[customFunction.js]"
  }
}
```

The `__fromFile__` keyword lets you specify a Javascript module inside the squared brackets, which will execute the a manual Strategy on the Projection Updates message.

:::info
The `file` should be mountend into a specific config map of the micro-service. Please refer to [Real-Time Updater](/fast_data/configuration/realtime-updater/realtime-updater.md) and [Single View Trigger Generator](/fast_data/configuration/single_view_trigger_generator.md) configuration pages.
:::

This Javascript file should export a default async generator function with the following parameters:
- `strategyContext`: object made of two properties:
  - `logger`: [Pino logger](https://github.com/pinojs/pino)
  - `dbMongo`: the configured [MongoDB Database](https://mongodb.github.io/node-mongodb-native/5.2/classes/Db.html) instance where the projections are stored
- `updateEvent`: The [Projection Updates](/fast_data/inputs_and_outputs.md#projection-update) message.

The function _yields_ one or more identifier retrieved from the update event.

:::tip Examples
Here's a couple of examples example of what a custom strategy could look like:


Simple Custom Strategy


```js
// note: this has to be an AsyncGenerator
module.exports = async function* myCustomStrategy ({ logger, dbMongo }, { after }) {
  yield { IDENTIFIER_FIELD: after.FIELD }
}
```




Custom Strategy with 1:n lookup


```js
module.exports = async function* myCustomStrategy ({ logger, dbMongo }, { after }) {
  const lookupRecords = await dbMongo.collection('lookup-collection').find({ field: after.FIELD })
  for await(const lookup of lookupRecords) {
    yield { IDENTIFIER_FIELD: lookup.FIELD }
  }
}
```



:::

</TabItem>
</Tabs>
